force-app/main/default/objects/Product2/fields/FenixTrace_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>FenixTrace_Last_Error__c</fullName>
    <label>FenixTrace Last Error</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>