force-app/main/default/objects/Product2/fields/FenixTrace_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>FenixTrace_Last_Sync__c</fullName>
    <label>FenixTrace Last Sync</label>
    <type>DateTime</type>
</CustomField>