force-app/main/default/objects/Product2/fields/FenixTrace_Notarization_TX__c.field-meta.xml
<CustomField>
    <fullName>FenixTrace_Notarization_TX__c</fullName>
    <label>FenixTrace Notarization TX</label>
    <type>Text</type>
    <length>255</length>
</CustomField>