force-app/main/default/objects/Product2/fields/FenixTrace_State__c.field-meta.xml
<CustomField>
    <fullName>FenixTrace_State__c</fullName>
    <label>FenixTrace State</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
        <value><fullName>Queued</fullName><default>false</default><label>Queued</label></value>
        <value><fullName>Synced</fullName><default>false</default><label>Synced</label></value>
        <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
    </valueSetDefinition></valueSet>
</CustomField>