force-app/main/default/objects/Product2/fields/FenixTrace_TX_Hash__c.field-meta.xml
<CustomField>
    <fullName>FenixTrace_TX_Hash__c</fullName>
    <label>FenixTrace TX Hash</label>
    <type>Text</type>
    <length>255</length>
</CustomField>